[package]
name = "mapf-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mapf = { path="../mapf" }
iced = { git = "https://github.com/mxgrey/iced", branch = "asymmetric_scale", features = ["canvas", "smol"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main" }
iced_native = { git = "https://github.com/mxgrey/iced", branch = "asymmetric_scale" }
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.0"
directories-next = "2.0"
native-dialog = "*"
derivative = "*"
lyon = "*"
nalgebra = "*"
arrayvec = "*"
