[package]
name = "mapf-viz"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mapf = { path="../mapf" }
iced = { git = "https://github.com/mxgrey/iced", branch = "asymmetric_scale", features = ["canvas", "smol"] }
iced_native = { git = "https://github.com/mxgrey/iced", branch = "asymmetric_scale" }
serde = { version="1.0", features = ["derive"] }
serde_yaml = "*"
async-std = "1.0"
directories-next = "2.0"
derivative = "*"
lyon = "*"
nalgebra = "*"
arrayvec = "*"
time-point = "*"
clap = { version = "4.2.1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
native-dialog = "*"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# wasm-bindgen 0.2.85 introduces a compile error in stdweb
wasm-bindgen = "=0.2.84"
