[package]
name = "mapf-viz"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mapf = { path="../mapf" }
iced = { git = "https://github.com/mxgrey/iced", branch = "asymmetric_scale", features = ["canvas", "smol"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", tag = "v0.1.0" }
iced_native = { git = "https://github.com/mxgrey/iced", branch = "asymmetric_scale" }
serde = { version="1.0", features = ["derive"] }
serde_yaml = "*"
async-std = "1.0"
directories-next = "2.0"
native-dialog = "*"
derivative = "*"
lyon = "*"
nalgebra = "*"
arrayvec = "*"
time-point = "*"
clap = { version = "4.2.1", features = ["derive"] }
