[package]
name = "mapf"
version = "0.1.1"
edition = "2021"
description = "Base traits and utilities for multi-agent planning"
license = "Apache-2.0"
repository = "https://github.com/open-rmf/mapf"
keywords = ["mapf", "multi", "agent", "planning", "search"]

[badges]
maintenance = {status = "experimental"}

[dependencies]
# nalgebra is waiting on a release of https://github.com/dimforge/nalgebra/pull/1094
nalgebra = "0.31.1" #{ git = "https://github.com/dimforge/nalgebra", branch = "dev" }
time-point = "0.1"
sorted-vec = { git = "https://gitlab.com/grey12/sorted-vec", branch = "master" }
simba = "*"
num-complex = "*"
cached = "0.40"
approx = "*"
num = "*"
arrayvec = "0.7.1"
bitfield = "*"
derivative = "*"
anyhow = "*"
thiserror = "*"

