[package]
name = "mapf"
version = "0.1.1"
edition = "2021"
description = "Base traits and utilities for multi-agent planning"
license = "Apache-2.0"
repository = "https://github.com/open-rmf/mapf"
keywords = ["mapf", "multi", "agent", "planning", "search"]

[badges]
maintenance = {status = "experimental"}

[dependencies]
nalgebra = "0.31.1"
time-point = "0.1"
sorted-vec = "0.8.2"
simba = "*"
num-complex = "*"
cached = "0.40"
num = "*"
arrayvec = "0.7.1"
bitfield = "*"
derivative = "*"
anyhow = "*"
thiserror = "*"
paste = "0.1"
float-ord = "*"
smallvec = "1.10"

[dev-dependencies]
approx = "*"
