[package]
name = "mapf"
version = "0.3.0"
edition = "2021"
description = "Base traits and utilities for multi-agent planning"
license = "Apache-2.0"
repository = "https://github.com/open-rmf/mapf"
keywords = ["mapf", "multi", "agent", "planning", "search"]

[badges]
maintenance = {status = "experimental"}

[dependencies]
nalgebra = "0.31.1"
time-point = "0.1"
sorted-vec = "0.8.2"
cached = "0.40"
num = "0.4"
arrayvec = "0.7.1"
bitfield = "0.19"
derivative = "2.2"
anyhow = "1.0"
thiserror = "1.0"
paste = "0.1"
float-ord = "0.3"
smallvec = "1.10"
serde = { version="1.0", features = ["derive"] }
serde_yaml = "0.9"
slotmap = "1.0"

[dev-dependencies]
approx = "0.5"
